admin for posts

--- a/config/locales/ru/active_record.ru.yml
+++ b/config/locales/ru/active_record.ru.yml
@@ -64,8 +64,8 @@ ru:
 
       meta: &meta
         keywords: Ключевые слова
-        description: Описание
-        title: Заголовок
+        seo_description: Описание
+        seo_title: Заголовок
       states: &states
         state:
           draft: Черновик
