--- a/config/locales/ru/active_record.ru.yml
+++ b/config/locales/ru/active_record.ru.yml
@@ -114,6 +114,7 @@ ru:
         price: Цена
         discount: Скидка
         product_category: Категория продуктов
+        average_score: Рейтинг
       product_category:
         <<: *main
         products: Продукты
