admin for products: crud for stores

--- a/config/locales/ru/activeadmin.ru.yml
+++ b/config/locales/ru/activeadmin.ru.yml
@@ -147,6 +147,7 @@ ru:
       photo: Изображения
       characteristics: Характеристики
       characteristic_category: Категория характеристик
+      stores: Магазины
       batch_action:
         zero: Не одной записи не было выбранное
         one: "(1) запись успешно обновлена"
