add reviews for product

--- a/config/locales/ru/active_record.ru.yml
+++ b/config/locales/ru/active_record.ru.yml
@@ -153,3 +153,7 @@ ru:
       products_store:
         count: Количество продуктов
         store: Магазин
+      review:
+        pluses: Плюсы
+        cons: Минусы
+        body: Отзыв
