main page news block

--- a/config/locales/ru/time_date.ru.yml
+++ b/config/locales/ru/time_date.ru.yml
@@ -4,7 +4,7 @@ ru:
     formats:
       default: ! '%a, %d %b %Y, %H:%M:%S %z'
       long: ! '%d %B %Y, %H:%M'
-      short: ! '%d %b, %H:%M'
+      short: ! '%d %B %Y'
     pm: вечера
 
   date:
