--- a/config/locales/ru/ru.yml
+++ b/config/locales/ru/ru.yml
@@ -43,3 +43,5 @@ ru:
       tanks_for_your_vote: Спасибо за Ваш голос
       you_have_already_voted: Вы уже голосовали
       product_not_found: 'Продукт не найден'
+
+  i_like: 'Мне нравится'
