--- a/config/locales/ru/ru.yml
+++ b/config/locales/ru/ru.yml
@@ -44,10 +44,13 @@ ru:
       you_have_already_voted: Вы уже голосовали
       product_not_found: 'Продукт не найден'
 
+  about_good: О товаре
   all_brands: Все бренды
   brands: Бренды
+  goods_supplied: Товары в комплект
   i_like: Мне нравится
   new_products: Новинки
   popular: Популярные
   product_price: Цена
   show: Показать
+  you_might_also_like: Вам может понравится
