--- a/config/locales/ru/ru.yml
+++ b/config/locales/ru/ru.yml
@@ -43,6 +43,9 @@ ru:
       tanks_for_your_vote: Спасибо за Ваш голос
       you_have_already_voted: Вы уже голосовали
       product_not_found: 'Продукт не найден'
+    product_categories:
+      sale:
+        all_products: 'Sale. Все продукты (%{count})'
 
   about_good: О товаре
   all_brands: Все бренды
