--- a/config/locales/ru/ru.yml
+++ b/config/locales/ru/ru.yml
@@ -49,6 +49,7 @@ ru:
 
   about_good: О товаре
   all_brands: Все бренды
+  all_products: Все товары
   brands: Бренды
   goods_supplied: Товары в комплект
   i_like: Мне нравится
