user registration and flash alerts

--- a/config/locales/ru/devise.ru.yml
+++ b/config/locales/ru/devise.ru.yml
@@ -33,6 +33,7 @@ ru:
       signed_out: "До свидания!"
       remember: Запомнить
     passwords:
+      length: 'Минимальная длина пароля %{length}'
       send_instructions: "В течение нескольких минут вы получите письмо с инструкциями по восстановлению вашего пароля."
       updated: "Ваш пароль изменён. Теперь вы вошли в систему."
       send_paranoid_instructions: "Если ваш адрес e-mail есть в нашей базе данных, то в течение нескольких минут вы получите письмо с инструкциями по восстановлению вашего пароля."
