--- a/config/locales/ru/simple_captcha.ru.yml
+++ b/config/locales/ru/simple_captcha.ru.yml
@@ -1,6 +1,6 @@
 ru:
   simple_captcha:
-    placeholder: Введите код с картинки
+    placeholder: ''
     label: Введите код с картинки
     refresh_button_text: ''
     message:
