--- a/config/locales/ru/ru.yml
+++ b/config/locales/ru/ru.yml
@@ -68,6 +68,7 @@ ru:
   delete: Удалить
   goods_supplied: Товары в комплект
   i_like: Мне нравится
+  my_profile: Мой профиль
   my_wishlist: Мой список желаний
   new_products: Новинки
   news: Новости
@@ -78,3 +79,4 @@ ru:
   show: Показать
   useful_information: 'Полезная информация'
   you_might_also_like: Вам может понравится
+  you_watched: Вы смотрели
