--- a/config/locales/ru/flash.ru.yml
+++ b/config/locales/ru/flash.ru.yml
@@ -9,3 +9,7 @@ ru:
     users:
       update:
         success: Ваш профиль успешно обновлен
+      settings:
+        settings_update:
+          success: Профиль успешно обновлен
+          error: Возникли ошибки
