user settings and help page without form

--- a/config/locales/ru/ru.yml
+++ b/config/locales/ru/ru.yml
@@ -76,6 +76,7 @@ ru:
     moscow: Москва
   delete: Удалить
   goods_supplied: Товары в комплект
+  questions: Ваши вопросы
   i_like: Мне нравится
   my_profile: Мой профиль
   my_wishlist: Мой список желаний
