help page with feedback form

--- a/config/locales/ru/flash.ru.yml
+++ b/config/locales/ru/flash.ru.yml
@@ -10,3 +10,7 @@ ru:
       update:
         success: Ваш профиль успешно обновлен
         error: Возникли ошибки
+    pages:
+      feedback:
+        success: Ваше сообщение успешно отправлено
+        error: Возникли ошибки
