--- a/config/locales/ru/ru.yml
+++ b/config/locales/ru/ru.yml
@@ -100,6 +100,7 @@ ru:
   page_not_found: Страница не найдена
   phone: Телефон
   popular: Популярные
+  product_in_cart: Товар находится в корзине
   product_price: Цена
   registration: Регистрация
   save: Сохранить
