--- a/config/locales/ru/ru.yml
+++ b/config/locales/ru/ru.yml
@@ -67,6 +67,8 @@ ru:
 
   about_good: О товаре
   addition: Дополнительно
+  add_to_cart: Добавить в корзину
+  alien_cart: Это не ваша корзина
   all_brands: Все бренды
   all_products: Все товары
   ask_a_question: Задать вопрос
