--- a/config/locales/ru/flash.ru.yml
+++ b/config/locales/ru/flash.ru.yml
@@ -14,3 +14,14 @@ ru:
       feedback:
         success: Ваше сообщение успешно отправлено
         error: Возникли ошибки
+    line_items:
+      create:
+        success: Товар успешно добавлен
+        errors: 'При добавлении товара возникли ошибки, попробуйте еще раз'
+      destroy:
+        success: Товарная позиция успешно удалена
+      update:
+        success: Товарная позиция успешно обновлена
+    carts:
+      destroy:
+        success: Корзина успешно очищена
