--- a/config/locales/ru/flash.ru.yml
+++ b/config/locales/ru/flash.ru.yml
@@ -17,7 +17,7 @@ ru:
     line_items:
       create:
         success: Товар успешно добавлен
-        errors: 'При добавлении товара возникли ошибки, попробуйте еще раз'
+        error: 'При добавлении товара возникли ошибки, попробуйте еще раз'
       destroy:
         success: Товарная позиция успешно удалена
       update:
@@ -25,3 +25,7 @@ ru:
     carts:
       destroy:
         success: Корзина успешно очищена
+    subscribed_emails:
+      create:
+        success: Спасибо за подписку
+        error: 'Попробуйте еще раз, возникли ошибки'
