newletter worker and mailer, fix batch actions localization

--- a/config/locales/ru/activeadmin.ru.yml
+++ b/config/locales/ru/activeadmin.ru.yml
@@ -7,6 +7,7 @@ ru:
     view: "Открыть"
     edit: "Изменить"
     delete: "Удалить"
+    send_newletter: Отправить пользователям
     delete_confirmation: "Вы уверены, что хотите удалить это?"
     new_model: "Создать %{model}"
     create_model: "Создать %{model}"
@@ -76,6 +77,7 @@ ru:
         published: Опубликовать
         removed: Удалить
         moderated: Отправить на модерацию
+        send_newletters: Разослать пользователям
     comments:
       resource_type: "Тип ресурса"
       author_type: "Тип автора"
@@ -151,16 +153,26 @@ ru:
       site: Ссылка на сайт производителя
       stores: Магазины
       batch_action:
-        zero: Не одной записи не было выбранное
+        zero: Не одной записи не было выбранно
         one: "(1) запись успешно обновлена"
         few: "(%{count}) записи успешно обновлено"
+        many: "(%{count}) записей успешно обновлено"
         other: "(%{count}) записей успешно обновлено"
+        newletters:
+          zero: Не одной записи не было выбранно
+          one: "(1) рассылка успешно отправлена в очередь"
+          few: "(%{count}) рассылки успешно отправлены в очередь"
+          many: "(%{count}) рассылок успешно отправлены в очередь"
+          other: "(%{count}) рассылок успешно отправлено в очередь"
       products:
         reviews: Отзывы
       newletters:
         posts_count: 'Количество постов: %{count}'
         new_posts_yes: 'Отправлять только новые посты: Да'
         new_posts_no: 'Отправлять только новые посты: Нет'
+        send_newletter:
+          success: Рассылка успешно отправлена
+          failure: Возникли ошибки
         subscription_type:
           news: О новостях сайта
           bonus: О моих бонусах
